// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RandomRouterForm should convert from a non-random node 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_random"
  title="Split randomly"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split randomly",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Split randomly",
        "type": "split_by_random",
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="options"
  >
    <div
      className="lead_in u font secondary body-md color-neutral-cloudy"
    >
      Split randomly into
    </div>
    <div
      className="bucket_select"
    >
      <SelectElement
        entry={
          Object {
            "value": Object {
              "name": "2 buckets",
              "value": "2",
            },
          }
        }
        key="buckets_select"
        name="Buckets"
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "2 buckets",
              "value": "2",
            },
            Object {
              "name": "3 buckets",
              "value": "3",
            },
            Object {
              "name": "4 buckets",
              "value": "4",
            },
            Object {
              "name": "5 buckets",
              "value": "5",
            },
            Object {
              "name": "6 buckets",
              "value": "6",
            },
            Object {
              "name": "7 buckets",
              "value": "7",
            },
            Object {
              "name": "8 buckets",
              "value": "8",
            },
            Object {
              "name": "9 buckets",
              "value": "9",
            },
            Object {
              "name": "10 buckets",
              "value": "10",
            },
          ]
        }
        style="sm"
      />
    </div>
  </div>
  <div
    className="bucket_list"
  >
    <TextInputElement
      __className="bucket_name"
      entry={
        Object {
          "validationFailures": Array [],
          "value": "Bucket 1",
        }
      }
      key="306dee46-46c7-4a8a-8a33-ab2b7e42b02e"
      name="306dee46-46c7-4a8a-8a33-ab2b7e42b02e"
      onChange={[Function]}
    />
    <TextInputElement
      __className="bucket_name"
      entry={
        Object {
          "validationFailures": Array [],
          "value": "Bucket 2",
        }
      }
      key="90e20a49-6ecc-4b0b-97bf-bcbd37069b63"
      name="90e20a49-6ecc-4b0b-97bf-bcbd37069b63"
      onChange={[Function]}
    />
  </div>
  <OptionalTextInput
    maxLength={64}
    name="Save as result"
    onChange={[Function]}
    toggleText="Save as"
    value={
      Object {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`RandomRouterForm should convert from a non-random node 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "b5292cef-6113-4066-80f5-371178abf28b",
        },
        Object {
          "destination_uuid": null,
          "uuid": "f627a69c-a227-451f-9520-ce969f02162e",
        },
      ],
      "router": Object {
        "categories": Array [
          Object {
            "exit_uuid": "b5292cef-6113-4066-80f5-371178abf28b",
            "name": "Bucket 1",
            "uuid": "306dee46-46c7-4a8a-8a33-ab2b7e42b02e",
          },
          Object {
            "exit_uuid": "f627a69c-a227-451f-9520-ce969f02162e",
            "name": "Bucket 2",
            "uuid": "90e20a49-6ecc-4b0b-97bf-bcbd37069b63",
          },
        ],
        "type": "random",
      },
      "uuid": "c99dcf07-2ad6-4730-9e99-810a39f5a58d",
    },
    "ui": Object {
      "config": null,
      "position": null,
      "type": "split_by_random",
    },
  },
]
`;

exports[`RandomRouterForm should convert from a non-random node 3`] = `
Object {
  "inboundConnections": Object {},
  "node": Object {
    "actions": Array [
      Object {
        "all_urns": false,
        "text": "A message",
        "type": "send_msg",
        "uuid": "38282c32-100e-4376-af57-7f6a36ddafba",
      },
    ],
    "exits": Array [
      Object {
        "uuid": "b5a6cc81-02ba-4931-b4be-a0d7204be029",
      },
    ],
    "uuid": "c99dcf07-2ad6-4730-9e99-810a39f5a58d",
  },
  "ui": Object {
    "position": Object {
      "left": 100,
      "top": 100,
    },
    "type": "execute_actions",
  },
}
`;

exports[`RandomRouterForm should initialize existing random 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Split randomly
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Split randomly"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="options"
        >
          <div
            class="lead_in u font secondary body-md color-neutral-cloudy"
          >
            Split randomly into
          </div>
          <div
            class="bucket_select"
          >
            <div
              class="ele"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-select"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_buckets"
                >
                  <!---->
                  <span
                    class="dropdown"
                    data-v-6fe2671f=""
                  >
                    <div
                      data-v-2d3b8b50=""
                      data-v-6fe2671f=""
                      readonly="readonly"
                      style="position: relative;"
                    >
                      <input
                        class="input size-sm normal has-icon-right"
                        data-v-2d3b8b50=""
                        data-v-f03c53b0=""
                        iconright="arrow-button-down-1"
                        iconrightclickable="true"
                        placeholder=""
                        readonly="readonly"
                        size="0"
                        type="text"
                      />
                      <!---->
                      <span
                        class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-cloudy"
                        data-v-2d3b8b50=""
                        data-v-a1936218=""
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 40 40"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="primary"
                            d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                            fill="#3B414D"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      __use_react_component_wrap=""
                      data-v-6fe2671f=""
                      style="all: unset;"
                    >
                      <option
                        label="2 buckets"
                        value="2"
                      >
                        2 buckets
                      </option>
                      <option
                        label="3 buckets"
                        value="3"
                      >
                        3 buckets
                      </option>
                      <option
                        label="4 buckets"
                        value="4"
                      >
                        4 buckets
                      </option>
                      <option
                        label="5 buckets"
                        value="5"
                      >
                        5 buckets
                      </option>
                      <option
                        label="6 buckets"
                        value="6"
                      >
                        6 buckets
                      </option>
                      <option
                        label="7 buckets"
                        value="7"
                      >
                        7 buckets
                      </option>
                      <option
                        label="8 buckets"
                        value="8"
                      >
                        8 buckets
                      </option>
                      <option
                        label="9 buckets"
                        value="9"
                      >
                        9 buckets
                      </option>
                      <option
                        label="10 buckets"
                        value="10"
                      >
                        10 buckets
                      </option>
                    </div>
                    <div
                      class="dropdown-data"
                      data-v-6fe2671f=""
                      style="position: fixed; top: 0px;"
                    />
                  </span>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bucket_list"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="e67ce051-f3e4-4c42-807b-e393df5fa382"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="e0bc3776-792f-49d2-b4be-48be2cf8159a"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="6c22884b-0e35-4206-982e-18320691eda9"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="a62e8284-49f8-4292-adbc-d5f6607f85c5"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="0c8c9239-9b59-473a-a229-d8a9693be270"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="optional_text_input toggle"
        >
          <span
            class="toggle_link "
            data-spec="toggle-link"
            data-testid="toggle-link"
          >
            Save as
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <span
                class="unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cleanest"
                data-passed-props="[object Object]"
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 40 40"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    d="M14.0093 34.6856L29.5962 20.9572C29.726 20.8328 29.8292 20.6835 29.8997 20.5182C29.9702 20.3529 30.0066 20.1751 30.0066 19.9954C30.0066 19.8157 29.9702 19.6379 29.8997 19.4726C29.8292 19.3073 29.726 19.158 29.5962 19.0336L14.0093 5.31149C13.8857 5.20174 13.7412 5.11796 13.5845 5.06514C13.4279 5.01232 13.2622 4.99153 13.0973 5.00401C12.9325 5.01648 12.7718 5.06197 12.6249 5.13776C12.4779 5.21356 12.3477 5.31812 12.242 5.44522L10.296 7.75745C10.0786 8.0153 9.97133 8.34827 9.99728 8.68451C10.0232 9.02076 10.1804 9.33332 10.4347 9.55474L22.2496 19.7598C22.2837 19.7891 22.311 19.8255 22.3298 19.8664C22.3486 19.9072 22.3583 19.9517 22.3583 19.9967C22.3583 20.0416 22.3486 20.0861 22.3298 20.1269C22.311 20.1678 22.2837 20.2042 22.2496 20.2335L10.4385 30.4423C10.3118 30.5523 10.2081 30.6862 10.1333 30.8363C10.0584 30.9865 10.0139 31.1499 10.0023 31.3172C9.98744 31.4836 10.0061 31.6513 10.0572 31.8104C10.1083 31.9695 10.1908 32.1167 10.2997 32.2434L12.247 34.5568C12.3529 34.6836 12.4832 34.7879 12.6301 34.8635C12.7771 34.9391 12.9377 34.9845 13.1024 34.997C13.2672 35.0094 13.4328 34.9887 13.5894 34.9361C13.746 34.8835 13.8905 34.8 14.0143 34.6906L14.0093 34.6856Z"
                    fill="#3B414D"
                  />
                </svg>
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RandomRouterForm should remove exits when shrinking 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Split randomly
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Split randomly"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="options"
        >
          <div
            class="lead_in u font secondary body-md color-neutral-cloudy"
          >
            Split randomly into
          </div>
          <div
            class="bucket_select"
          >
            <div
              class="ele"
            >
              <div
                data-use-vue-component-wrap=""
                style="all: unset;"
              >
                <div
                  class="unnnic-select"
                  data-passed-props="[object Object]"
                  data-testid="temba_select_buckets"
                >
                  <!---->
                  <span
                    class="dropdown"
                    data-v-6fe2671f=""
                  >
                    <div
                      data-v-2d3b8b50=""
                      data-v-6fe2671f=""
                      readonly="readonly"
                      style="position: relative;"
                    >
                      <input
                        class="input size-sm normal has-icon-right"
                        data-v-2d3b8b50=""
                        data-v-f03c53b0=""
                        iconright="arrow-button-down-1"
                        iconrightclickable="true"
                        placeholder=""
                        readonly="readonly"
                        size="9"
                        type="text"
                      />
                      <!---->
                      <span
                        class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                        data-v-2d3b8b50=""
                        data-v-a1936218=""
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 40 40"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="primary"
                            d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                            fill="#3B414D"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      __use_react_component_wrap=""
                      data-v-6fe2671f=""
                      style="all: unset;"
                    >
                      <option
                        label="2 buckets"
                        value="2"
                      >
                        2 buckets
                      </option>
                      <option
                        label="3 buckets"
                        value="3"
                      >
                        3 buckets
                      </option>
                      <option
                        label="4 buckets"
                        value="4"
                      >
                        4 buckets
                      </option>
                      <option
                        label="5 buckets"
                        value="5"
                      >
                        5 buckets
                      </option>
                      <option
                        label="6 buckets"
                        value="6"
                      >
                        6 buckets
                      </option>
                      <option
                        label="7 buckets"
                        value="7"
                      >
                        7 buckets
                      </option>
                      <option
                        label="8 buckets"
                        value="8"
                      >
                        8 buckets
                      </option>
                      <option
                        label="9 buckets"
                        value="9"
                      >
                        9 buckets
                      </option>
                      <option
                        label="10 buckets"
                        value="10"
                      >
                        10 buckets
                      </option>
                      <option
                        label="3 buckets"
                        value="3"
                      >
                        3 buckets
                      </option>
                    </div>
                    <div
                      class="dropdown-data"
                      data-v-6fe2671f=""
                      style="position: fixed; top: 0px;"
                    />
                  </span>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bucket_list"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="e81b3f1a-0863-4418-8a72-9c9f8aa72b7c"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="1888ae1f-2518-4727-98e2-731674e1760e"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
            unnnic-input="true"
          >
            <div
              class="unnnic-input size-sm"
              data-passed-props="[object Object]"
              data-testid="dd57500e-a8e8-4a98-8b5b-a33637523a8d"
              data-v-391ed932=""
            >
              <!---->
              <div
                class="input-container"
                data-v-391ed932=""
              >
                <!---->
                <input
                  class="unnnic-font secondary"
                  data-v-391ed932=""
                  type="text"
                />
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="optional_text_input toggle"
        >
          <span
            class="toggle_link "
            data-spec="toggle-link"
            data-testid="toggle-link"
          >
            Save as
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <span
                class="unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cleanest"
                data-passed-props="[object Object]"
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 40 40"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    d="M14.0093 34.6856L29.5962 20.9572C29.726 20.8328 29.8292 20.6835 29.8997 20.5182C29.9702 20.3529 30.0066 20.1751 30.0066 19.9954C30.0066 19.8157 29.9702 19.6379 29.8997 19.4726C29.8292 19.3073 29.726 19.158 29.5962 19.0336L14.0093 5.31149C13.8857 5.20174 13.7412 5.11796 13.5845 5.06514C13.4279 5.01232 13.2622 4.99153 13.0973 5.00401C12.9325 5.01648 12.7718 5.06197 12.6249 5.13776C12.4779 5.21356 12.3477 5.31812 12.242 5.44522L10.296 7.75745C10.0786 8.0153 9.97133 8.34827 9.99728 8.68451C10.0232 9.02076 10.1804 9.33332 10.4347 9.55474L22.2496 19.7598C22.2837 19.7891 22.311 19.8255 22.3298 19.8664C22.3486 19.9072 22.3583 19.9517 22.3583 19.9967C22.3583 20.0416 22.3486 20.0861 22.3298 20.1269C22.311 20.1678 22.2837 20.2042 22.2496 20.2335L10.4385 30.4423C10.3118 30.5523 10.2081 30.6862 10.1333 30.8363C10.0584 30.9865 10.0139 31.1499 10.0023 31.3172C9.98744 31.4836 10.0061 31.6513 10.0572 31.8104C10.1083 31.9695 10.1908 32.1167 10.2997 32.2434L12.247 34.5568C12.3529 34.6836 12.4832 34.7879 12.6301 34.8635C12.7771 34.9391 12.9377 34.9845 13.1024 34.997C13.2672 35.0094 13.4328 34.9887 13.5894 34.9361C13.746 34.8835 13.8905 34.8 14.0143 34.6906L14.0093 34.6856Z"
                    fill="#3B414D"
                  />
                </svg>
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RandomRouterForm should remove exits when shrinking 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
        },
        Object {
          "destination_uuid": null,
          "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
        },
        Object {
          "destination_uuid": null,
          "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
        },
      ],
      "router": Object {
        "categories": Array [
          Object {
            "exit_uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
            "name": "Bucket 1",
            "uuid": "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c",
          },
          Object {
            "exit_uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
            "name": "Bucket 2",
            "uuid": "1888ae1f-2518-4727-98e2-731674e1760e",
          },
          Object {
            "exit_uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
            "name": "Bucket 3",
            "uuid": "dd57500e-a8e8-4a98-8b5b-a33637523a8d",
          },
        ],
        "type": "random",
      },
      "uuid": "96249bdc-cb58-4489-a188-0eeb6686a8c9",
    },
    "ui": Object {
      "config": null,
      "position": null,
      "type": "split_by_random",
    },
  },
]
`;

exports[`RandomRouterForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="split_by_random"
  title="Split randomly"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "description": "Split randomly",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Split randomly",
        "type": "split_by_random",
      }
    }
    onChange={[MockFunction]}
  />
  <div
    className="options"
  >
    <div
      className="lead_in u font secondary body-md color-neutral-cloudy"
    >
      Split randomly into
    </div>
    <div
      className="bucket_select"
    >
      <SelectElement
        entry={
          Object {
            "value": Object {
              "name": "2 buckets",
              "value": "2",
            },
          }
        }
        key="buckets_select"
        name="Buckets"
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "2 buckets",
              "value": "2",
            },
            Object {
              "name": "3 buckets",
              "value": "3",
            },
            Object {
              "name": "4 buckets",
              "value": "4",
            },
            Object {
              "name": "5 buckets",
              "value": "5",
            },
            Object {
              "name": "6 buckets",
              "value": "6",
            },
            Object {
              "name": "7 buckets",
              "value": "7",
            },
            Object {
              "name": "8 buckets",
              "value": "8",
            },
            Object {
              "name": "9 buckets",
              "value": "9",
            },
            Object {
              "name": "10 buckets",
              "value": "10",
            },
          ]
        }
        style="sm"
      />
    </div>
  </div>
  <div
    className="bucket_list"
  >
    <TextInputElement
      __className="bucket_name"
      entry={
        Object {
          "validationFailures": Array [],
          "value": "Bucket 1",
        }
      }
      key="1dce2b34-9aab-4e20-81c4-3f0408dcb671"
      name="1dce2b34-9aab-4e20-81c4-3f0408dcb671"
      onChange={[Function]}
    />
    <TextInputElement
      __className="bucket_name"
      entry={
        Object {
          "validationFailures": Array [],
          "value": "Bucket 2",
        }
      }
      key="763e4844-3e1b-407a-a1b5-5fdfcd308b41"
      name="763e4844-3e1b-407a-a1b5-5fdfcd308b41"
      onChange={[Function]}
    />
  </div>
  <OptionalTextInput
    maxLength={64}
    name="Save as result"
    onChange={[Function]}
    toggleText="Save as"
    value={
      Object {
        "value": "",
      }
    }
  />
</Dialog>
`;
